Make sure that thumbnails are generated from exactBounds()

Now the layer thumbnails are generated only at the very end of the stroke,
that is, when the image is idle. It makes it possible to use more
expensive exactBounds() routine for the thumbnails update.

BUG:459273